tests/ui/misuse.stderr
warning: panic message is not a string literal
   --> $DIR/lib.rs:472:12
    |
472 |     panic!(AbortNow)
    |            ^^^^^^^^
    |
    = note: `#[warn(non_fmt_panics)]` on by default
    = note: this usage of panic!() is deprecated; it will be a hard error in Rust 2021
    = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/panic-macro-consistency.html>
help: add a "{}" format string to Display the message
    |
472 |     panic!("{}", AbortNow)
    |            ^^^^^
help: or use std::panic::panic_any instead
    |
472 |     std::panic::panic_any(AbortNow)
    |     ^^^^^^^^^^^^^^^^^^^^^

error[E0599]: the method `FIRST_ARG_MUST_EITHER_BE_Span_OR_IMPLEMENT_ToTokens_OR_BE_SpanRange` exists for reference `&Foo`, but its trait bounds were not satisfied
 --> $DIR/misuse.rs:8:5
  |
4 | struct Foo;
  | ----------- doesn't satisfy `Foo: quote::to_tokens::ToTokens`
...
8 |     abort!(Foo, "BOOM");
  |     ^^^^^^^^^^^^^^^^^^^^ method cannot be called on `&Foo` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Foo: quote::to_tokens::ToTokens`
          which is required by `&Foo: ToTokensAsSpanRange`
  = note: this error originates in the macro `$crate::diagnostic` (in Nightly builds, run with -Z macro-backtrace for more info)
